# securiety

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: create.rs  curie.rs  curie_parser.rs  error.rs  lib.rs  traits.rs
src/validators/: curie_patterns.rs  general_validator.rs  mod.rs  regex_validator.rs
tests/: test_integration.rs
