[package]
authors = ["Rouven Reuter <Rouven.Reuter@proton.me>"]
description = "A crate for parsing and validating CURIE IDs"
edition = "2024"
homepage = "https://robinsongroup.github.io/"
license = "MIT"
name = "securiety"
version = "0.2.0"
repository = "https://github.com/SmartMonkey-git/securiety"
keywords = ["ontology", "curie", "bioinformatics", "validation", "parsing"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
regex = { version = "1.12.2", default-features = false, features = ["std", "perf", "unicode-perl"] }

[dev-dependencies]
mockall = "0.14.0"

